Fix bug 102921 "Mozilla crashes when Cache in profile dir points to nonexistent directory". Change to fail nsDiskCacheDevice::Init() if mCacheDirectory is nsnull.  sr=darin.